<resources>
    <string name="app_name">AccelerometerApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="send">SEND</string>
    <string name="ref">REFRESH</string>
    <string name="per">PERIOD:</string>
    <string name="time">TIMES:</string>
    <string name="times">seconds</string>
    <string-array name="times_list">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="auth">Authorize please</string>
    <string name="hist">There should be a history of sessions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
